# steel-cookbook

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  alchemy.run.ts  authors.yaml  build.config.ts  lychee.toml  package-lock.json  package.json  registry.yaml  tsconfig.json
.cursor/rules/: cookbook-rules.mdc
.github/scripts/: verify_registry.py
.github/workflows/: examples-validate.yml  links.yml  publish.yml  registry-check.yml  validate.yml
examples/agentkit/: README.md  index.ts  package.json  tsconfig.json
examples/agno/: README.md  main.py  pyproject.toml  requirements.txt
examples/auth-context/: README.md  index.ts  package.json
examples/auth-context-go/: .gitignore  README.md  go.mod  main.go
examples/auth-context-py/: README.md  main.py  pyproject.toml
examples/auth-context-rs/: Cargo.toml  README.md
examples/auth-context-ts/: .gitignore  README.md  index.ts  package.json
examples/browser-use/: README.md  main.py  pyproject.toml
examples/browser-use-captcha-auto/: README.md  main.py  pyproject.toml
examples/browser-use-captcha-manual/: README.md  main.py  pyproject.toml
examples/browser-use-fast-typing/: README.md  main.py  pyproject.toml
examples/chromedp/: .gitignore  README.md  go.mod  go.sum  main.go
examples/chromedp-go/: .gitignore  README.md  go.mod  go.sum  main.go
examples/chromiumoxide/: Cargo.toml  README.md
examples/chromiumoxide-rs/: Cargo.toml  README.md
examples/chromiumoxide-rs/src/: main.rs
examples/claude-agent-sdk-py/: README.md  main.py  pyproject.toml
examples/claude-agent-sdk-ts/: README.md  index.ts  package.json
examples/claude-computer-use-go/: .env.example  .gitignore  README.md  go.mod  go.sum  main.go
examples/claude-computer-use-mobile/: README.md  index.ts  package.json
examples/claude-computer-use-py/: README.md  hello.py  main.py  pyproject.toml  requirements.txt
examples/claude-computer-use-rs/: Cargo.toml  README.md
examples/claude-computer-use-ts/: README.md  index.ts  package.json
examples/convex-chat-with-page/: README.md  package.json
examples/convex-price-watch/: .gitignore  README.md  index.html  package.json
examples/credentials/: README.md  index.ts  package.json
examples/credentials-go/: .gitignore  README.md  go.mod  main.go
examples/credentials-py/: README.md  main.py  pyproject.toml
examples/credentials-rs/: Cargo.toml  README.md
examples/credentials-ts/: README.md  index.ts  package.json
examples/crewai/: README.md  main.py  pyproject.toml  requirements.txt
examples/deep-research-py/: README.md  main.py  pyproject.toml
examples/deep-research-ts/: README.md  index.ts  package.json
examples/deep-research-with-steel/: .env.example  .gitignore  BUILD_PLAN.md  README.md  (+9 more)
examples/extensions-py/: README.md  main.py  pyproject.toml
examples/files-rs/: Cargo.toml  README.md
examples/files-rs/src/: main.rs
examples/gemini-computer-use-py/: README.md  main.py  pyproject.toml
examples/langgraph/: README.md  main.py  pyproject.toml
examples/mcp-rs/: Cargo.toml  README.md
examples/mcp-rs/src/: main.rs
examples/microsoft-agent-framework/: README.md  main.py  pyproject.toml
examples/notte/: README.md  main.py  pyproject.toml  requirements.txt
examples/openai-computer-use-py/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
examples/openai-computer-use-rs/: .env.example  Cargo.toml  README.md
examples/openai-computer-use-rs/src/: main.rs
examples/pydantic-ai/: README.md  main.py  pyproject.toml
examples/restate-agent-py/: README.md  main.py  pyproject.toml
examples/restate-agent-rs/: Cargo.toml  README.md
examples/restate-agent-rs/src/: main.rs
examples/rig/: Cargo.toml  README.md
examples/rig/src/: main.rs
examples/steel-browser-use-starter/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
examples/steel-claude-computer-use-python-starter/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
examples/steel-crew-ai-starter/: README.md  main.py  pyproject.toml  report.md  requirements.txt
examples/steel-openai-agents-python-starter/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
examples/steel-skyvern-starter/: .env.example  README.md  main.py  pyproject.toml
examples/swiftide/: Cargo.toml  README.md
examples/swiftide/src/: main.rs
examples/temporal-browser-workflow-py/: .env.example  .gitignore  README.md  main.py  pyproject.toml  workflows.py
examples/temporal-browser-workflow-rs/: .env.example  .gitignore  Cargo.toml  README.md
examples/temporal-browser-workflow-rs/src/: main.rs  workflows.rs
examples/you-com-search/: .env.example  README.md  main.py  pyproject.toml
mdx/: browser-use-python.mdx  code.mdx  example.mdx  example2.mdx  groups.json  playwright-python.mdx  playwright-typescript.mdx  puppeteer-typescript.mdx  puppeteer.mdx  reuse-auth-context-example.mdx  steel-aeo-clone.mdx  steel-agent-kit-starter.mdx  steel-agno-starter.mdx  steel-ai-sdk-nextjs-starter.mdx  steel-ai-sdk-starter.mdx  steel-auth-context-starter.mdx  steel-browser-use-captcha-solver-starter.mdx  steel-browser-use-starter.mdx  steel-claude-computer-use-node-starter.mdx  steel-claude-computer-use-python-starter.mdx  steel-credentials-starter.mdx  steel-crew-ai-starter.mdx  steel-extensions-api-starter.mdx  steel-extensions-dark-mode-starter.mdx  steel-extensions-starter.mdx  steel-files-api-starter.mdx  steel-magnitude-starter.mdx  steel-morph-computer-use-starter.mdx  steel-notte-starter.mdx  steel-oai-computer-use-node-starter.mdx  steel-oai-computer-use-python-starter.mdx  steel-openai-agents-node-starter.mdx  steel-openai-agents-python-starter.mdx  steel-perplexity-clone.mdx  steel-playwright-python-starter.mdx  steel-playwright-starter-js.mdx  steel-playwright-starter.mdx  steel-profiles-starter.mdx  steel-puppeteer-starter-js.mdx  steel-puppeteer-starter.mdx  (+3 more)
scripts/: build-mdx.ts  examples-check.ts  generate-csv.ts  types.ts  upload-files.ts  upload-schema.ts  validate.ts
src/: index.ts  worker.ts
templates/: README.md
utils/: compile-mdx.ts
(+525 files in other folders)
