[package]
name = "chromiumoxide-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
