[package]
name = "files-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
async-tungstenite = { version = "0.27", features = ["tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
dotenvy = "0.15"
