[project]
name = "gemini-computer-use-py"
version = "0.1.0"
description = "Steel + Gemini Computer Use: drive a cloud browser with Google's computer-use model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.73.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.17.0",
]
