[package]
name = "mcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
chromiumoxide = "0.9"
async-tungstenite = { version = "0.32", features = ["tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
dotenvy = "0.15"
