[project]
name = "microsoft-agent-framework-example"
version = "0.1.0"
description = "Build a browser agent with Microsoft Agent Framework and Steel"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework>=1.0.0",
    "playwright>=1.48.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.16.0",
]
