[project]
name = "steel-notte-starter"
version = "0.1.0"
description = "AI-powered browser automation using Notte with Steel browsers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notte==1.8.13",
    "patchright>=1.55.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.16.0",
]
