[package]
name = "openai-computer-use-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
dotenvy = "0.15"
