[package]
name = "restate-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
restate-sdk = "0.10"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steel-rs = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
