[package]
name = "rig"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
rig-core = "0.39"
chromiumoxide = "0.9"
async-tungstenite = { version = "0.32", features = ["tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
