[project]
name = "steel-claude-computer-use-python-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pillow>=10.0.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.9.0",
]
