[project]
name = "steel-crew-ai-starter"
version = "0.1.0"
description = "Steel + CrewAI: a multi-agent research/report crew backed by Steel's scrape API"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14,<2",
    "openai>=2.0,<3",
    "pydantic>=2.11,<3",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.16.0",
]
