[project]
name = "steel-openai-agents-python-starter"
version = "0.1.0"
description = "Build an AI browser agent with the OpenAI Agents SDK (Python) and Steel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.1.0",
    "playwright>=1.48.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.16.0",
]
