[package]
name = "swiftide"
version = "0.1.0"
edition = "2021"

[dependencies]
steel-rs = "0.1"
swiftide = { version = "0.32", features = ["anthropic", "swiftide-agents", "macros"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
