[package]
name = "temporal-browser-workflow-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
prost-wkt-types = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steel-rs = "0.1.3"
temporalio-client = "0.4"
temporalio-common = "0.4"
temporalio-macros = "0.4"
temporalio-sdk = "0.4"
temporalio-sdk-core = "0.4"
tokio = { version = "1", features = ["full"] }
url = "2"
