[project]
name = "you-com-search"
version = "0.1.0"
description = "Combine You.com Search/Contents APIs with Steel cloud browsers in a search-then-act agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.0",
    "steel-sdk>=0.16.0",
]
